# ai_summary_generator

./: CMakeLists.txt  README.md  capture_image.cpp  main.cpp  ocr.cpp  summarize.cpp
